<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuitem_afficherConsoDetaillee"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="63000"
        android:title="@string/button_afficher_suivi_conso_detaille"/>
    <item
        android:id="@+id/editAccounts"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="64000"
        android:title="@string/menuitem_editercomptes"/>
    <item
        android:id="@+id/basculerTheme"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="64010"
        android:title="@string/menuitem_changertheme"/>
    <item
        android:id="@+id/options"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="64020"
        android:title="@string/menuitem_options"/>

</menu>