<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/pseudoAboLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_pseudo" />

        <EditText
            android:id="@+id/pseudoAbo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/loginAboLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_login" />

        <EditText
            android:id="@+id/loginAbo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/pwdAboLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_pwd" />

        <EditText
            android:id="@+id/pwdAbo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_saveorupdate" />

        <Button
            android:id="@+id/retoursanssauvegarder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_retoursanssauvegarder" />

        <Button
            android:id="@+id/delete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_delete" />
    </LinearLayout>

</ScrollView>