<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="1,2" >

        <TableRow>

            <ImageView android:id="@+id/choixcouleur_icone_voix" />

            <Button
                android:id="@+id/bouton_couleur_icone_voix"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_changerCouleur" />

            <Button
                android:id="@+id/bouton_retablir_couleur_icone_voix"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_retablirCouleur" />
        </TableRow>

        <TableRow>

            <ImageView android:id="@+id/choixcouleur_icone_numspec" />

            <Button
                android:id="@+id/bouton_couleur_icone_numspec"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_changerCouleur" />

            <Button
                android:id="@+id/bouton_retablir_couleur_icone_numspec"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_retablirCouleur" />
        </TableRow>

        <TableRow>

            <ImageView android:id="@+id/choixcouleur_icone_sms_mms" />

            <Button
                android:id="@+id/bouton_couleur_icone_sms_mms"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_changerCouleur" />

            <Button
                android:id="@+id/bouton_retablir_couleur_icone_sms_mms"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_retablirCouleur" />
        </TableRow>

        <TableRow>

            <ImageView android:id="@+id/choixcouleur_icone_data" />

            <Button
                android:id="@+id/bouton_couleur_icone_data"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_changerCouleur" />

            <Button
                android:id="@+id/bouton_retablir_couleur_icone_data"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_retablirCouleur" />
        </TableRow>

        <TableRow>

            <ImageView android:id="@+id/choixcouleur_icone_hf" />

            <Button
                android:id="@+id/bouton_couleur_icone_hf"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_changerCouleur" />

            <Button
                android:id="@+id/bouton_retablir_couleur_icone_hf"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_retablirCouleur" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/bouton_retour_choix_couleur"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:text="@string/button_choixcouleur_retour" />
        </TableRow>
    </TableLayout>

</ScrollView>